--- a/src/index.css
+++ b/src/index.css
@@ -81,9 +81,12 @@ body{
   padding-bottom: 10px;
 }
 
-.about,
-.interests{
+.about{
   padding: 10px 20px;
+  background-color: #1A1B21;
+}
+
+.interests{
   background-color: #1A1B21;
 }
 
@@ -107,7 +110,7 @@ body{
   font-size: 16px;
   display: flex;
   gap: 5px;
-  height: 40px;
+  height: 35px;
   justify-content: center;
   align-items: center;
 }
